# Houg

./: Dockerfile  db.json  pyproject.toml
GBD/houggbd/: package-lock.json  package.json
GBD/houggbd/public/: index.html
GBD/houggbd/src/: App.css  App.js  index.js
GBD/houggbd/src/components/: GerenciamentoCamisetas.css  GerenciamentoCamisetas.js
api/: main.py
api/dinoma/: create_order.py
api/model/: model.py
api/persons/: users.py
